# F1TenthControlNodes

./: README.md
Python Training Scripts/Real Car/Old Semantic Segmentation/RealCarSemanticSegmentation/: main.py  train_network100.pth  train_network112.pth  train_network33.pth  train_network46.pth
Python Training Scripts/Real Car/Semantic Segmentation/: bayesian_model.py  config.py  converter.py  dataset.py  loss.py  trainer.py
Python Training Scripts/Real Car/Semantic Segmentation/RealCarSemanticSegmentation/: train_network22.pth  train_network40.pth  train_network51.pth
Python Training Scripts/Real Car/Semantic Segmentation/SegmentationImageModelConverter/: main.py
Python Training Scripts/Real Car/Semantic Segmentation/saved_models/: train_network_python103.pth
Python Training Scripts/Simulator/Following/Steering and Speed Converter/: main.py
Python Training Scripts/Simulator/Following/Steering and Speed Trainer/: main.py
ROS Nodes/Simulator/Data Recording/overtaking_recorder/: CMakeLists.txt  package.xml
ROS Nodes/Simulator/Data Recording/overtaking_recorder/launch/: overtaking_recorder.launch
ROS Nodes/Simulator/Data Recording/overtaking_recorder/src/: overtaking_recorder.cpp
ROS Nodes/Simulator/Runtime/overtaking_with_neural_network/: CMakeLists.txt  laneState.pt  leftTurnNetwork.pt  package.xml  rightTurnNetwork.pt  settings.yaml  turningDirection.pt
ROS Nodes/Simulator/Runtime/overtaking_with_neural_network/launch/: overtaking_with_neural_network.launch
ROS Nodes/Simulator/Runtime/overtaking_with_neural_network/src/: overtaking_with_neural_network.cpp
(+2 files in other folders)
